# image-uploads

./: .env  README.md  db.sqlite3  pyproject.toml  test.rest
api/: models.py  serializers.py  urls.py  views.py
config/: settings.py
frontEnd/: index.Html  script.js  styles.css
