[tool.poetry]
name = "basic-api"
version = "0.1.0"
description = ""
authors = ["mindahun21 <mndahun0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.5"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.4.0"
cloudinary = "^1.42.1"
django-cloudinary-storage = "^0.3.0"
python-dotenv = "^1.0.1"
pillow = "^11.1.0"
django-cors-headers = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
